--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.6",
-    "next": "13.2",
+    "next": "^13.3.4",
     "node": "^19.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-scrollbar": "^3.0.0",
     "typescript": "5.0.3"
   },
   "devDependencies": {
