--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.6",
     "next": "^13.4.7",
+    "next-themes": "^0.2.1",
     "node": "^16.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
