--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-scrollbar": "^3.0.0",
     "typescript": "5.0.3"
   },
